--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -41,7 +41,7 @@
     "    classification_report,\n",
     ")\n",
     "\n",
-    "from ModelBuilderMethods import getConn, extractYears\n"
+    "from ModelBuilderMethods import getConn, extractYears"
    ]
   },
   {
@@ -122,7 +122,7 @@
     "    \"\"\"\n",
     "    SELECT year, district, downgrade from ergot_sample_feat_eng\n",
     "\"\"\"\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -139,7 +139,7 @@
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
     "conn.close()\n",
-    "del conn\n"
+    "del conn"
    ]
   },
   {
@@ -158,7 +158,7 @@
     "# merge on year and district\n",
     "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
     "del ergotTargetDf\n",
-    "del tempdf\n"
+    "del tempdf"
    ]
   },
   {
@@ -201,7 +201,7 @@
     "# train 1995 - 2015 test 2016 - 2020\n",
     "trainDf = extractYears(datasetDf, 1995, 2015)\n",
     "testDf = extractYears(datasetDf, 2016, 2020)\n",
-    "del datasetDf\n"
+    "del datasetDf"
    ]
   },
   {
@@ -245,7 +245,7 @@
     "# count nan\n",
     "print(trainDf.isna().sum())\n",
     "# set nan to 0\n",
-    "trainDf = trainDf.fillna(0)\n"
+    "trainDf = trainDf.fillna(0)"
    ]
   },
   {
@@ -294,7 +294,7 @@
    "outputs": [],
    "source": [
     "# df = pd.DataFrame()\n",
-    "# scaled = scaleColumns(df, ['max_temp'], None, 1)\n"
+    "# scaled = scaleColumns(df, ['max_temp'], None, 1)"
    ]
   },
   {
@@ -311,7 +311,7 @@
     "    print(\"F1: \", f1_score(y_true, y_pred))\n",
     "    print(\"ROC AUC: \", roc_auc_score(y_true, y_pred))\n",
     "    print(\"Classification Report: \\n\", classification_report(y_true, y_pred))\n",
-    "    print()\n"
+    "    print()"
    ]
   },
   {
@@ -365,7 +365,7 @@
     "    n_jobs=CORES,\n",
     "    min_samples_split=MINSPLSPLIT,\n",
     "    min_samples_leaf=MINSAMPLELEAF,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -377,7 +377,7 @@
     "model_rf.fit(balancedTrainDfX, balancedTrainDfY)\n",
     "model_nobalance_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
     "balanced_model_rf.fit(trainDf.drop(columns=\"downgrade\"), trainDf[\"downgrade\"])\n",
-    "balanced_model_balanced_rf.fit(balancedTrainDfX, balancedTrainDfY)\n"
+    "balanced_model_balanced_rf.fit(balancedTrainDfX, balancedTrainDfY)"
    ]
   },
   {
@@ -395,7 +395,7 @@
    "outputs": [],
    "source": [
     "# set nan to 0\n",
-    "testDf = testDf.fillna(0)\n"
+    "testDf = testDf.fillna(0)"
    ]
   },
   {
