--- a/src/Models/Forest/ForestStationPrevErg.ipynb
+++ b/src/Models/Forest/ForestStationPrevErg.ipynb
@@ -149,7 +149,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
@@ -188,7 +187,7 @@
    "source": [
     "# drop year\n",
     "trainDf = trainDf.drop(columns=[\"year\"])\n",
-    "testDf = testDf.drop(columns=[\"year\"])\n"
+    "testDf = testDf.drop(columns=[\"year\"])"
    ]
   },
   {
