--- a/src/Models/Boost/BoostSatellite.ipynb
+++ b/src/Models/Boost/BoostSatellite.ipynb
@@ -146,7 +146,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "# encode district\n",
     "datasetDf[\"district\"] = datasetDf[\"district\"].astype(\"category\")\n",
     "\n",
@@ -185,7 +184,7 @@
    "source": [
     "# drop year\n",
     "trainDf = trainDf.drop(columns=[\"year\"])\n",
-    "testDf = testDf.drop(columns=[\"year\"])\n"
+    "testDf = testDf.drop(columns=[\"year\"])"
    ]
   },
   {
