--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -233,7 +233,7 @@
     "# pre balancing check\n",
     "# print value counts downgrade\n",
     "print(trainDf[\"downgrade\"].value_counts())\n",
-    "print(testDf[\"downgrade\"].value_counts())\n"
+    "print(testDf[\"downgrade\"].value_counts())"
    ]
   },
   {
@@ -268,7 +268,7 @@
    "source": [
     "# post balancing check\n",
     "# print value counts downgrade\n",
-    "print(balancedTrainDfY.value_counts())\n"
+    "print(balancedTrainDfY.value_counts())"
    ]
   },
   {
