Sample pipeline notebook

--- a/src/Models/Boost/BoostStation.ipynb
+++ b/src/Models/Boost/BoostStation.ipynb
@@ -5,22 +5,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "how this notebook works"
+    "## Gradient Boosting Model on Weather Station Data\n",
+    "\n",
+    "- Gradient builds an additive model in a forward stage-wise fashion, which allows for the optimization of arbitrary differentiable loss functions. \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# dependencies\n",
-    "\n",
+    "# import dependencies\n",
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
     "import sys, os\n",
     "import pickle\n",
-    "from imblearn.combine import SMOTEENN, SMOTETomek\n",
+    "from imblearn.combine import SMOTEENN\n",
     "from xgboost import XGBClassifier\n",
     "from sklearn.ensemble import (  # type: ignore\n",
     "    GradientBoostingClassifier,\n",
@@ -46,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,33 +61,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "setting up a dataset"
+    "### <u>**Step 1**</u>: Data Selection\n",
+    "\n",
+    "In this step, we would choose the particular data/table, pick attributes from existing tables. Further aggregation/feature engineer can be done here to support the point of the research.\n",
+    "\n",
+    "Particular, for this notebook, we grab the following data and merge them (on year, district) into a single table:\n",
+    "- Monthly weather station\n",
+    "- ergot data (downgrade)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Set the query text\n",
     "weatherStationQuery = sq.text(\n",
     "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_station\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "weatherSatQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT * from dataset_cross_monthly_sat\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "ergotPrevYearsAggQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT year, district, \n",
-    "    present_prev1, present_prev2, present_prev3,\n",
-    "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
-    "    from agg_ergot_sample_v2\n",
     "\"\"\"\n",
     ")\n",
     "\n",
@@ -99,15 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn = getConn(\"./.env\")\n",
     "\n",
     "stationDf = pd.read_sql(weatherStationQuery, conn)\n",
-    "# satelliteDf = pd.read_sql(weatherSatQuery, conn)\n",
-    "ergotPrevDf = pd.read_sql(ergotPrevYearsAggQuery, conn)\n",
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
     "conn.close()\n",
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,15 +125,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
+    "Then, the district number would be categorized using [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html) techniques.\n",
+    "\n",
+    "One-hot encoding techniques would take input, which is a categorical value. Then, the features are encoded using a one-hot (aka ‘one-of-K’ or ‘dummy’) encoding scheme. This creates a binary column for each category and returns a sparse matrix or dense array (depending on the sparse_output parameter).\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,15 +152,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "splitting the dataset"
+    "### <u>**Step 2**</u>: Splitting dataset\n",
+    "\n",
+    "- We split the whole dataset into the train/test split. Particularly, split them by year (1995 - 2015 for training, 2016 - 2020 for testing) since this is a time series data."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,13 +189,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "balancing the dataset https://imbalanced-learn.org/stable/\n",
-    "\n"
+    "### <u>**Step 3**</u>: [Balancing the dataset](https://imbalanced-learn.org/stable/)\n",
+    "\n",
+    "- Our dataset is unbalanced and can lead to bias when training/testing. Balacing step would help to eliminate the bias of the dataset, thus provide more reliable results."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -728,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -753,20 +751,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### normalization / scaling\n",
+    "### <u>**Step 4**</u>: Regularization / Normalization\n",
     "some blurb about scalers  \n",
-    "0 [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
-    "1 [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
-    "2 [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
-    "3 [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
-    "4 [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
-    "5 [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
-    "6 [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
+    "\n",
+    "1. [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
+    "2. [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
+    "3. [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
+    "4. [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
+    "5. [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
+    "6. [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
+    "7. [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -775,25 +774,8 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# encoded = encodeColumns(df, ['max_temp'], None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -813,12 +795,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "selecting a model"
+    "### <u>**Step 5**</u>: Gradient Boosting Classifier Model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -858,7 +840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -942,7 +924,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1020,7 +1002,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1030,7 +1012,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1036,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1091,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -1289,7 +1271,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
