--- a/src/Ergot/ergotVisualization.ipynb
+++ b/src/Ergot/ergotVisualization.ipynb
@@ -47,6 +47,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -75,6 +84,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : Self contained data retrieval for the ergot visualization for the data before aggregation\n",
+    "\n",
+    "Psuedocode: \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -91,6 +111,17 @@
    "outputs": [],
    "source": [
     "ergot_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose: \n",
+    "- The purpose of this code is to update the \"district\" values for provinces entries in the DataFrame. It adjusts the district codes, to reconcile them for consistency.\n",
+    "\n",
+    "Psuedocode : \n",
+    "- Update the in the DataFrame ergot_df based on the \"province\" and \"crop_district\" values for each row. "
    ]
   },
   {
@@ -111,12 +142,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:  \n",
+    "Merge the soil and drop irrelevant columns\n",
+    "- Drop irrelevant attributes "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "ergot_df.drop(columns=[\"crop_district\", \"sample_id\"], inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to ensure that the \"district\" column contains integer values\n",
+    "\n",
+    "Psuedocode :\n",
+    "- [convert district value to integer type](https://pandas.pydata.org/docs/reference/api/pandas.to_numeric.html)\n"
    ]
   },
   {
@@ -127,6 +178,20 @@
    "source": [
     "ergot_df[\"district\"] = pd.to_numeric(ergot_df[\"district\"], downcast=\"integer\")\n",
     "ergot_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to visualize and compare the incidence of the specified condition in the provinces of Manitoba, Alberta, and Saskatchewan over the years. \n",
+    "\n",
+    "Psuedocode :\n",
+    "- [use plt.xlabel to label x-axis](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.ylabel.html)\n",
+    "- [use plt.xlabel to label y-axis](https://matplotlib.org/3.1.1/api/_as_gen/matplotlib.pyplot.xlabel.html)\n",
+    "- [use plt.figure to determine the dimensions of graph](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.figure.html)\n",
+    "- [use plt.plot to plot the graph](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.plot.html)"
    ]
   },
   {
@@ -163,6 +228,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to create a DataFrame (ratio_df) containing the ratio of the incidence of ergot for each province over the years. The ratio represents how frequently the condition occurs relative to the total incidence count for each province-year group."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -172,6 +245,14 @@
     "ratio_df[\"ratio\"] = (samples_df[\"incidence\"] / ratio_df[\"incidence\"]).to_frame()\n",
     "ratio_df.drop(columns=[\"incidence\"], inplace=True)\n",
     "ratio_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to visualize and compare the incidence ratios of the specified condition for each province over the years."
    ]
   },
   {
@@ -229,6 +310,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to calculate the incidence ratio (as a percentage) of ergot for each region (province and district) over the years. \n",
+    "\n",
+    "Output:\n",
+    "- The resulting region_df DataFrame contains the \"province\", \"year\", \"district\", \"incidence\", and \"ratio\" columns, where \"ratio\" represents the calculated incidence ratio for each region."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -246,6 +338,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to fetch geospatial data related to agricultural regions from database and store it in a GeoDataFrame (agRegions). \n",
+    "- This GeoDataFrame can be used for operations such as plotting the regions on maps."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -255,6 +356,23 @@
     "agRegions = gpd.GeoDataFrame.from_postgis(\n",
     "    regionQuery, conn, crs=\"EPSG:3347\", geom_col=\"geometry\"\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to convert a numerical value into a corresponding color representation based on a chosen colormap. \n",
+    "\n",
+    "Psuedocode:\n",
+    "- [Normalization](https://matplotlib.org/stable/api/_as_gen/matplotlib.colors.Normalize.html): The function uses the `colors.Normalize()` function to normalize the input `value` between the specified minimum (`vmin`) and maximum (`vmax`) values. This ensures that the value falls within the range of 0 to 1.\n",
+    "\n",
+    "- [Colormap Retrieval](https://matplotlib.org/stable/api/_as_gen/matplotlib.cm.get_cmap.html): It then retrieves the specified colormap using the `cm.get_cmap()`.\n",
+    "\n",
+    "- Color Mapping: The normalized `value` is used as input to the colormap obtained in the previous step. The colormap maps the normalized value to a corresponding RGB color using the `cmap(norm(abs(value)))` operation. \n",
+    "\n",
+    "- [Hexadecimal Color Conversion](https://matplotlib.org/stable/api/_as_gen/matplotlib.colors.rgb2hex.html): The resulting RGB color tuple is then converted to a hexadecimal color string using the `colors.rgb2hex()`."
    ]
   },
   {
@@ -275,6 +393,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- The purpose of this function is to create a color map for a set of districts based on the provided ratio data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -291,6 +417,27 @@
     "            color_map.append(color_map_color(0))\n",
     "\n",
     "    return pd.Series(color_map)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to visualize incident levels for each district on a map. It takes the incident ratio color map and the year as input to create a choropleth map. Each district is colored according to its incident level, and the district names are annotated on the map for easy identification."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Psuedocode:\n",
+    "- Get the bounding box (minimum and maximum coordinates). \n",
+    "- Create a figure and axes.\n",
+    "- Set the y-axis and x-axis limits of the axes using the bounding box coordinates obtained earlier.\n",
+    "- Set the title of the plot to \"Incident level for district in {year}\".\n",
+    "- Plot the GeoDataFrame on the axes , and pass color_map as an argument to color the districts based on the provided incident level data.\n",
+    "- [Display the plot](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.show.html)."
    ]
   },
   {
@@ -320,6 +467,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this pseudocode is to loop through the years in the range (1995 to 2022) and create map visualizations for each year based on incident ratio data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -337,6 +492,18 @@
    "metadata": {},
    "source": [
     "# Visualization for aggregated ergot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : Self contained data retrieval for the ergot visualization for the data after aggregation\n",
+    "\n",
+    "Psuedocode: \n",
+    "- Create the agg_ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- obtain the unique values in the \"severity\" column of the DataFrame."
    ]
   },
   {
@@ -360,6 +527,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to provide basic descriptive statistics (first quartile, median, third quartile) of the given numerical data and identify outliers using the Interquartile Range (IQR) method."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -379,6 +554,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to analyze the \"severity\" data from the DataFrame. It calculates the quartiles (Q1, Q2, Q3) using the stats function and identifies any outlier values. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -389,6 +572,14 @@
     "print(\"number of outliers:\", len(outliers))\n",
     "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
     "print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to remove outliers from the \"severity\" data in the DataFrame wo_outliers and then create a box plot without the outliers. The box plot visually represents the distribution of the \"severity\" data without extreme values"
    ]
   },
   {
@@ -430,6 +621,14 @@
     "    ]\n",
     "].drop_duplicates()\n",
     "present_df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to analyze the relationships between ergot incidents in the current year and different scenarios related to previous years and neighboring areas. By calculating the percentages, it provides insights into how the presence of ergot in specific periods or neighboring areas might influence the occurrence of ergot in the current year."
    ]
   },
   {
@@ -497,6 +696,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to analyze the severity levels in districts with no ergot incidents (has_ergot is False) but with a non-zero sum of severity levels (sum_severity > 0). It first filters the severity_df to select such rows and then calculates the quartiles and detects outliers in the \"sum_severity\" data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -517,6 +724,14 @@
     "print(\"number of outliers:\", len(outliers))\n",
     "print(\"q1, q2, q3: {}, {}, {}\".format(q1, q2, q3))\n",
     "print(outliers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to visualize the distribution of severity levels across districts without displaying any outliers."
    ]
   },
   {
