--- a/src/Ergot/featureEngErgot.ipynb
+++ b/src/Ergot/featureEngErgot.ipynb
@@ -20,6 +20,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Create the ergot data SQL query\n",
+    "- Create the agg_ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -77,6 +88,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- Create a table containg relevant attributes."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -106,6 +125,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to add a new column called \"downgrade\" to the input DataFrame, indicating whether each district is considered a \"downgrade\" district based on its severity level"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -116,6 +143,14 @@
     "    df[\"downgrade\"] = False\n",
     "    df.loc[df[\"severity\"] >= DOWNGRADE_THRESHOLD, \"downgrade\"] = True\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to add a new column named \"severity_bin_quan\" to the input DataFrame, which represents the quantile bin numbers of severity levels for each district."
    ]
   },
   {
@@ -134,6 +169,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to add a new column named \"severity_bin_arb\" to the input DataFrame df, which represents the bin numbers of severity levels for each district based on arbitrary threshold values. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -145,6 +188,14 @@
     "    df.loc[df[\"severity\"] >= 0.04, \"severity_bin_arb\"] = 2\n",
     "    df.loc[df[\"severity\"] >= 0.08, \"severity_bin_arb\"] = 3\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of the code snippet is to process ergot sample data, calculate additional columns (\"downgrade,\" \"severity_bin_quan,\" \"severity_bin_arb\"), and store the processed data in a database table. "
    ]
   },
   {
