--- a/src/Ergot/featureEngErgot.ipynb
+++ b/src/Ergot/featureEngErgot.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# featureEngErgot.ipynb\n",
+    "\n",
+    "Feature Engineering for ergot and agg_ergot by creating additional columns and processing them."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
