--- a/src/Ergot/aggregateErgot.ipynb
+++ b/src/Ergot/aggregateErgot.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Psuedocode:  \n",
+    "- Load the environment database variables"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -38,6 +46,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to fetch the agricultural region data from the PostgreSQL database and convert it into a GeoDataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -52,6 +68,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : Self contained data retrieval data aggregation\n",
+    "\n",
+    "Psuedocode: \n",
+    "- Create the ergot data SQL query and load it into a Pandas DataFrame.\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -61,6 +88,14 @@
     "    ergotQuery = sq.text(\"SELECT * FROM public.ergot_sample\")\n",
     "\n",
     "    return pd.read_sql_query(ergotQuery, conn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to calculate and assign unique identifiers (UIDs) to each row in the ergot DataFrame based on the combination of \"province\" and \"crop_district\" values."
    ]
   },
   {
@@ -86,6 +121,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to calculate the neighboring agricultural regions for each region in the agRegions GeoDataFrame based on their geometries. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -104,6 +147,21 @@
     "        touches[str(agRegion1[\"district\"])] = currTouches\n",
     "\n",
     "    return touches"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this function is to aggregate and calculate various features for each unique combination of \"year\" and \"district\" in the input ergot DataFrame. \n",
+    "Psuedocode : \n",
+    "- This function calculates and assigns unique identifiers (UIDs) to each row in the input Pandas DataFrame. \n",
+    "- The UIDs are based on the combination of \"province\" and \"crop_district\" values. \n",
+    "- converts the \"district\" column to integer data type.\n",
+    "- Load the current samples for the current \"year\" and \"district\" for each unique year and district.\n",
+    "- Convert the \"ergotList\" into a Pandas DataFrame.\n",
+    "- Create bins for \"ergot_present\" and \"sum_severity\" features based on the Interquartile Range (IQR)."
    ]
   },
   {
@@ -226,6 +284,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : \n",
+    "- This function calculates and aggregates features for each unique combination of \"year\" and \"district\" in the input Pandas DataFrame. \n",
+    "Psuedocode :\n",
+    "- Load the samples for neighboring districts based on the \"touches\" information.\n",
+    "- Load samples for some of the previous years (year - 1, year - 2, year - 3) for the current \"district\".\n",
+    "- Calculate various aggregated features for the current combination of \"year\" and \"district,\" such as:\n",
+    "    - Percentage of true values (incidence) for the current samples.\n",
+    "    - Presence of ergot in the current samples based on the severity sum and ERGOT_DOWNGRADE_THRESHOLD.\n",
+    "    - Median and sum of severity for the current samples.\n",
+    "    - Presence of ergot in neighboring districts based on the severity sum and ERGOT_DOWNGRADE_THRESHOLD.\n",
+    "    - Various statistics for samples from previous years (presence, median, sum of severity).\n",
+    "- Append the calculated features to a dictionary named \"currEntry\".\n",
+    "- Append the \"currEntry\" dictionary to the \"ergotList\"."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -293,6 +370,13 @@
     "    ] = 0\n",
     "\n",
     "    return aggErgot"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : Create a respective AggErgotTable from the attributes retrieved from previous calls of functions."
    ]
   },
   {
@@ -393,6 +477,14 @@
     "    )\n",
     "\n",
     "    db.execute(query)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose :\n",
+    "- This function is responsible for aggregating ergot data, creating features, and storing the aggregated data in a new table. The function connects to the database using environment variables for the connection parameters, fetches the required data from the database, calculates various features for the data, and then creates a new table to store the aggregated data."
    ]
   },
   {
