--- a/src/Ergot/ergotCorrelation.ipynb
+++ b/src/Ergot/ergotCorrelation.ipynb
@@ -64,7 +64,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Purpose : Self contained data retrieval for the ergot visualization for the data before aggregation\n",
+    "Purpose : Self contained data retrieval for the correlation.\n",
     "\n",
     "Psuedocode: \n",
     "- Create the ergot data SQL query\n",
