--- a/src/Models/KNN.ipynb
+++ b/src/Models/KNN.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# KNN.ipynb\n",
+    "- Implementation of the k-nearest neighbors (KNN) algorithm for a binary classification task. \n",
+    "- The goal is to predict whether a sample has ergot or not based on the features in the dataset."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -17,6 +26,14 @@
     "\n",
     "sys.path.append(\"../\")\n",
     "from Datasets.DataCreation import getDatasetV1, getDatasetV2, getDatasetV3, getDatasetV4  # type: ignore\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- Clean and preprocess the dataset by handling duplicates and dropping unnecessary columns."
    ]
   },
   {
@@ -54,6 +71,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The code provided performs data splitting and oversampling using the Random Over-Sampling technique to address class imbalance. \n",
+    "\n",
+    "Psuedocode:\n",
+    "- Split the dataset into training and testing sets using the train_test_split function.\n",
+    "- Perform Random Over-Sampling on the training data to balance the class distribution"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -68,6 +97,14 @@
     "X_train, y_train = ros.fit_resample(X_train, y_train)\n",
     "\n",
     "print(y_train.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The provided code applies feature scaling to the training and testing sets using the [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html).\n"
    ]
   },
   {
@@ -88,6 +125,19 @@
    "outputs": [],
    "source": [
     "X_train"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The given code builds a k-Nearest Neighbors (k-NN) classification model, using a k value of 1, and evaluates its performance by predicting the target labels for the scaled testing feature matrix and calculating the accuracy score.\n",
+    "Psuedocode:\n",
+    "- [Create a k-Nearest Neighbors classifier model](https://scikit-learn.org/stable/modules/generated/sklearn.neighbors.KNeighborsClassifier.html)\n",
+    "- Train the k-NN model using the training feature\n",
+    "- Predict the target labels\n",
+    "- Calculate the accuracy score"
    ]
   },
   {
@@ -127,6 +177,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The provided code defines a function called result that evaluates the model by calculating various metrics such as accuracy, precision, recall, F1 score, and AUC score using the predictions (y_pred) and the actual labels (y_test)."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -149,6 +207,14 @@
     "\n",
     "    auc_score = roc_auc_score(y_test, y_pred)\n",
     "    print(\"AUC Score: \", auc_score)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : \n",
+    "- The provided code performs a k-Nearest Neighbors (k-NN) classification with different values of k (ranging from 1 to 99) and evaluates the model's performance using various metrics for each value of k. The results are printed to the console, and the accuracy scores for each k value."
    ]
   },
   {
