--- a/src/Ergot/ergotCorrelation.ipynb
+++ b/src/Ergot/ergotCorrelation.ipynb
@@ -19,6 +19,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Psuedocode:  \n",
+    "- Load the environment database variables\n",
+    "- Connect to the database"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -49,6 +58,19 @@
     "\n",
     "db = DataService(PG_DB, PG_ADDR, int(PG_PORT), PG_USER, PG_PW)\n",
     "conn = db.connect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose : Self contained data retrieval for the correlation.\n",
+    "\n",
+    "Psuedocode: \n",
+    "- Create the ergot data SQL query\n",
+    "- [Load the data from the database directly into a DataFrame](https://pandas.pydata.org/docs/reference/api/pandas.read_sql.html) \n",
+    "- drop irrelevant attributes\n",
+    "- [Compute pairwise correlation of columns, excluding NA/null values.](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.corr.html)"
    ]
   },
   {
@@ -91,6 +113,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of this code is to create a visually appealing heatmap to represent the correlation matrix. Heatmaps are an effective way to quickly identify patterns and relationships between variables in a dataset. \n",
+    "\n",
+    "Psuedocode:\n",
+    "- [Set the default theme ](https://seaborn.pydata.org/generated/seaborn.set_theme.html)\n",
+    "- [Create a Mase for Upper Triangle](https://numpy.org/doc/stable/reference/generated/numpy.triu.html)\n",
+    "- [Generate a Custom Colormap](https://seaborn.pydata.org/generated/seaborn.diverging_palette.html)\n",
+    "- [Create the heatmap](https://seaborn.pydata.org/generated/seaborn.heatmap.html)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -118,6 +154,15 @@
     "    linewidths=0.5,\n",
     "    cbar_kws={\"shrink\": 0.5},\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Purpose:\n",
+    "- The purpose of these pair plots is to provide a quick visual exploration of the relationships and patterns between various variables in the DataFrame. \n",
+    "- [sns.pairplot()](https://seaborn.pydata.org/generated/seaborn.pairplot.html)"
    ]
   },
   {
