--- a/src/Models/SVM.ipynb
+++ b/src/Models/SVM.ipynb
@@ -125,8 +125,8 @@
     "Purpose:\n",
     "- The given code builds a SVM classifier with the RBF kernel and a regularization parameter of 1, and evaluates its performance by predicting the target labels for the scaled testing feature matrix and calculating the accuracy score.\n",
     "Psuedocode:\n",
-    "- [Create a SVC model](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)\n",
-    "- Train the SVC model using the training feature\n",
+    "- [Create a SVM model](https://scikit-learn.org/stable/modules/generated/sklearn.svm.SVC.html)\n",
+    "- Train the SVM model using the training feature\n",
     "- Predict the target labels\n",
     "- Calculate the accuracy score"
    ]
