--- a/src/Models/classifiers.ipynb
+++ b/src/Models/classifiers.ipynb
@@ -13,8 +13,8 @@
     "import pandas as pd\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from datasets.setCreator import SetCreator  # type: ignore\n",
-    "from datasets.setModifier import SetModifier  # type: ignore"
+    "from Datasets.setCreator import SetCreator  # type: ignore\n",
+    "from Datasets.setModifier import SetModifier  # type: ignore"
    ]
   },
   {
