--- a/src/Models/regression.ipynb
+++ b/src/Models/regression.ipynb
@@ -13,8 +13,8 @@
     "import sys, warnings\n",
     "\n",
     "sys.path.append(\"../\")\n",
-    "from datasets.setCreator import SetCreator\n",
-    "from datasets.setModifier import SetModifier"
+    "from Datasets.setCreator import SetCreator\n",
+    "from Datasets.setModifier import SetModifier"
    ]
   },
   {
